--- a/build.xml
+++ b/build.xml
@@ -237,6 +237,22 @@
   </checkstyle>
  </target>
 
+ <target name="pmd">
+  <mkdir dir="${checkstyle.output.dir}"/>
+  <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask" classpathref="pmd.classpath"/>
+  <pmd shortFilenames="true">
+   <sourceLanguage name="java" version="1.6"/>
+   <ruleset>java-basic</ruleset>
+   <formatter type="xml" toFile="${checkstyle.output.dir}/pmd_errors.xml"/>
+   <fileset dir="src">
+    <include name="**/*.java"/>
+    <exclude name="se/raddo/raddose3D/parser/InputfileLexer.java"/>
+    <exclude name="se/raddo/raddose3D/parser/InputfileParser.java"/>
+    <exclude name="se/raddo/raddose3D/tests/**/*"/>
+   </fileset>
+  </pmd>
+ </target>
+
 
  <taskdef resource="testngtasks" classpath="lib/testng-6.8/testng-6.8.jar"/>
  <taskdef resource="checkstyletask.properties" classpath="lib/checkstyle-5.6/checkstyle-5.6-all.jar"/>
@@ -263,6 +279,13 @@
   <fileset dir="lib/JAI-1.1.3">
    <include name="*.jar"/>
  </fileset>
+ </path>
+
+ <path id="pmd.classpath">
+  <pathelement location="${build}"/>
+  <fileset dir="/raddose/pmd-bin-5.1.0/lib/">
+   <include name="*.jar"/>
+  </fileset>
  </path>
 
 </project>
