--- a/build.xml
+++ b/build.xml
@@ -197,14 +197,13 @@
  </target>
 
 
- <!-- Directories for TestNG and checkstyle reports -->
- <property name="testng.output.dir" value="testng"/>
- <property name="checkstyle.output.dir" value="checkstyle"/>
+ <!-- Directory for TestNG, checkstyle, PMD and FindBugs reports -->
+ <property name="report.dir" value="reports"/>
  
  <target name="test">
-  <mkdir dir="${testng.output.dir}"/>
+  <mkdir dir="${report.dir}"/>
   
-  <testng outputdir="${testng.output.dir}" classpathref="classes" excludedgroups="advanced"> 
+  <testng outputdir="${report.dir}" classpathref="classes" excludedgroups="advanced"> 
    <xmlfileset dir="." includes="testng.xml"/> 
    <classpath refid="antlr" />
    <classpath refid="math3" />
@@ -213,9 +212,9 @@
  </target>
 
  <target name="test-all">
-  <mkdir dir="${testng.output.dir}"/>
+  <mkdir dir="${report.dir}"/>
   
-  <testng outputdir="${testng.output.dir}" classpathref="classes" configFailurePolicy="continue"> 
+  <testng outputdir="${report.dir}" classpathref="classes" configFailurePolicy="continue"> 
    <xmlfileset dir="." includes="testng.xml"/> 
    <classpath refid="antlr" />
    <classpath refid="math3" />
@@ -224,7 +223,7 @@
  </target>
 
  <target name="checkstyle">
-  <mkdir dir="${checkstyle.output.dir}"/>
+  <mkdir dir="${report.dir}"/>
   <checkstyle config="lib/checkstyle-5.6/raddose_checks.xml" failOnViolation="false">
    <fileset dir="src">
     <include name="**/*.java"/>
@@ -233,17 +232,17 @@
     <exclude name="se/raddo/raddose3D/tests/**/*"/>
    </fileset>
 <!--  <formatter type="plain"/>  would print to screen -->
-   <formatter type="xml" toFile="${checkstyle.output.dir}/checkstyle_errors.xml"/>
+   <formatter type="xml" toFile="${report.dir}/checkstyle_errors.xml"/>
   </checkstyle>
  </target>
 
  <target name="pmd">
-  <mkdir dir="${checkstyle.output.dir}"/>
+  <mkdir dir="${report.dir}"/>
   <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask" classpathref="pmd.classpath"/>
   <pmd shortFilenames="true">
    <sourceLanguage name="java" version="1.6"/>
    <ruleset>lib/pmd-5.1.0/raddose-ruleset.xml</ruleset>
-   <formatter type="xml" toFile="${checkstyle.output.dir}/pmd_errors.xml"/>
+   <formatter type="xml" toFile="${report.dir}/pmd_errors.xml"/>
    <fileset dir="src">
     <include name="**/*.java"/>
     <exclude name="se/raddo/raddose3D/parser/InputfileLexer.java"/>
@@ -251,6 +250,29 @@
     <exclude name="se/raddo/raddose3D/tests/**/*"/>
    </fileset>
   </pmd>
+ </target>
+
+ <property name="findbugs.home" value="lib/findbugs-2.0.3" />
+ <target name="findbugs">
+  <mkdir dir="${report.dir}"/>
+  <taskdef name="findbugs" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" classpathref="findbugs.classpath" />
+
+  <findbugs home="${findbugs.home}"
+            output="xml:withMessages"
+            outputFile="${report.dir}/findbugs.xml" >
+   <fileset dir="bin">
+    <include name="**/*.class"/>
+    <exclude name="se/raddo/raddose3D/parser/InputfileLexer.class"/>
+    <exclude name="se/raddo/raddose3D/parser/InputfileParser.class"/>
+   </fileset>
+   <auxClasspath path="${basedir}/lib/antlr-3.4/antlr-3.4-cutdown.jar"/>
+   <auxClasspath path="${basedir}/lib/commons-math3-3.0/commons-math3-3.0.jar"/>
+   <auxClasspath path="${basedir}/lib/JAI-1.1.3/jai_core.jar"/>
+   <auxClasspath path="${basedir}/lib/testng-6.8/testng-6.8.jar"/>
+   <auxClasspath path="bin/se/raddo/raddose3D/parser/InputfileLexer.class"/>
+   <auxClasspath path="bin/se/raddo/raddose3D/parser/InputfileParser.class"/>
+   <sourcePath path="${basedir}/src" />
+  </findbugs>
  </target>
 
 
@@ -284,6 +306,13 @@
  <path id="pmd.classpath">
   <pathelement location="${build}"/>
   <fileset dir="lib/pmd-5.1.0">
+   <include name="*.jar"/>
+  </fileset>
+ </path>
+
+ <path id="findbugs.classpath">
+  <pathelement location="${build}"/>
+  <fileset dir="lib/findbugs-2.0.3/lib">
    <include name="*.jar"/>
   </fileset>
  </path>
