--- a/build.xml
+++ b/build.xml
@@ -262,15 +262,13 @@
             outputFile="${report.dir}/findbugs.xml" >
    <fileset dir="bin">
     <include name="**/*.class"/>
-    <exclude name="se/raddo/raddose3D/parser/InputfileLexer.class"/>
-    <exclude name="se/raddo/raddose3D/parser/InputfileParser.class"/>
+    <exclude name="se/raddo/raddose3D/parser/**/*"/>
    </fileset>
    <auxClasspath path="${basedir}/lib/antlr-3.4/antlr-3.4-cutdown.jar"/>
    <auxClasspath path="${basedir}/lib/commons-math3-3.0/commons-math3-3.0.jar"/>
    <auxClasspath path="${basedir}/lib/JAI-1.1.3/jai_core.jar"/>
    <auxClasspath path="${basedir}/lib/testng-6.8/testng-6.8.jar"/>
-   <auxClasspath path="bin/se/raddo/raddose3D/parser/InputfileLexer.class"/>
-   <auxClasspath path="bin/se/raddo/raddose3D/parser/InputfileParser.class"/>
+   <auxClasspath path="${basedir}/bin"/>
    <sourcePath path="${basedir}/src" />
   </findbugs>
  </target>
