Disable FindBugs Lock tests

--- a/build.xml
+++ b/build.xml
@@ -259,7 +259,9 @@
 
   <findbugs home="${findbugs.home}"
             output="xml:withMessages"
-            outputFile="${report.dir}/findbugs.xml" >
+            outputFile="${report.dir}/findbugs.xml"
+  	        excludeFilter="${findbugs.home}/raddose-exclusions.xml"
+  	        effort="max">
    <fileset dir="bin">
     <include name="**/*.class"/>
     <exclude name="se/raddo/raddose3D/parser/**/*"/>
