--- a/build.xml
+++ b/build.xml
@@ -127,7 +127,7 @@
     <attribute name="Bundle-DocURL" value="http://raddo.se/"/>
     <attribute name="Bundle-Copyright" value="E. F. Garman group"/>
     <attribute name="Import-Package" value="org.apache.commons.math3.analysis.function;version=3.0,org.apache.commons.math3.distribution;version=3.0"/>
-    <attribute name="Exported-Packages" value="se.raddo.raddose3D"/>
+    <attribute name="Export-Package" value="se.raddo.raddose3D"/>
    </manifest>
   </jar>
  </target>
