--- a/build.xml
+++ b/build.xml
@@ -209,7 +209,7 @@
  <target name="test">
   <mkdir dir="${report.dir}"/>
   
-  <testng outputdir="${report.dir}" classpathref="classes" excludedgroups="advanced"> 
+  <testng outputdir="${report.dir}" classpathref="classes" excludedgroups="advanced" haltOnfailure="true"> 
    <xmlfileset dir="." includes="testng.xml"/> 
    <classpath refid="antlr" />
    <classpath refid="math3" />
@@ -220,7 +220,7 @@
  <target name="test-all">
   <mkdir dir="${report.dir}"/>
   
-  <testng outputdir="${report.dir}" classpathref="classes" configFailurePolicy="continue"> 
+  <testng outputdir="${report.dir}" classpathref="classes" configFailurePolicy="continue" haltOnfailure="true"> 
    <xmlfileset dir="." includes="testng.xml"/> 
    <classpath refid="antlr" />
    <classpath refid="math3" />
