--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,15 @@
 	<classpathentry kind="lib" path="lib/testng-6.8/testng-6.8.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.22/mysql-connector-java-5.1.22-bin.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-1.9.5/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/client-combined-3.8.0.jar" sourcepath="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/client-combined-3.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/client-combined-3.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/byte-buddy-1.7.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/guava-23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/Selenium/libs/httpcore-4.4.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
