--- a/build.xml
+++ b/build.xml
@@ -97,6 +97,9 @@
    <zipfileset includes="**/*.class" src="lib/commons-math3-3.0/commons-math3-3.0.jar"/>
    <fileset dir=".">
     <include name="constants/MuCalcConstants.txt" />
+	<include name="constants/energy-coefs-low.txt" />
+	<include name="constants/energy-coefs-med.txt" />
+	<include name="constants/energy-coefs-high.txt" />
    </fileset>
 
    <manifest>
@@ -117,6 +120,9 @@
    <zipfileset includes="**/*.class" src="lib/antlr-3.4/antlr-3.4-cutdown.jar"/>
    <fileset dir=".">
     <include name="constants/MuCalcConstants.txt" />
+	<include name="constants/energy-coefs-low.txt" />
+	<include name="constants/energy-coefs-med.txt" />
+	<include name="constants/energy-coefs-high.txt" />
    </fileset>
 
    <manifest>
@@ -149,6 +155,9 @@
    -->
    <fileset dir=".">
     <include name="constants/MuCalcConstants.txt" />
+	<include name="constants/energy-coefs-low.txt" />
+	<include name="constants/energy-coefs-med.txt" />
+	<include name="constants/energy-coefs-high.txt" />
    </fileset>
 
    <manifest>
