--- a/build.xml
+++ b/build.xml
@@ -96,11 +96,13 @@
    <zipfileset includes="**/*.class" src="lib/antlr-3.4/antlr-3.4-cutdown.jar"/>
    <zipfileset includes="**/*.class" src="lib/commons-math3-3.0/commons-math3-3.0.jar"/>
    <fileset dir=".">
+    <include name="constants/EnergyCoefsLow.txt" />
+    <include name="constants/EnergyCoefsMed.txt" />
+    <include name="constants/EnergyCoefsHigh.txt" />
     <include name="constants/MuCalcConstants.txt" />
-    <include name="constants/energy-coefs-low.csv" />
-    <include name="constants/energy-coefs-med.csv" />
-    <include name="constants/energy-coefs-high.csv" />
    </fileset>
+
+   
 
    <manifest>
     <attribute name="Main-Class" value="se.raddo.raddose3D.RD3D"/>
