--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,15 @@
 	<classpathentry kind="lib" path="lib/testng-6.8/testng-6.8.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.22/mysql-connector-java-5.1.22-bin.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-1.9.5/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/client-combined-3.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/httpclient-4.5.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/httpcore-4.4.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/okhttp-3.10.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Josh/git/RADDOSE-3D/lib/selenium/libs/okio-1.14.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
