--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,7 @@
    <classpath refid="math3" />
    <classpath refid="testng" />
    <classpath refid="mockito" />
+   <classpath refid="selenium" />
   </javac>
  </target>
 
@@ -56,6 +57,7 @@
    <classpath refid="math3" />
    <classpath refid="testng" />
    <classpath refid="mockito" />
+   <classpath refid="selenium" />
   </javac>
  </target>
 
@@ -72,6 +74,7 @@
    <classpath refid="math3" />
    <classpath refid="testng" />
    <classpath refid="mockito" />
+   <classpath refid="selenium" />
   </javac>
  </target>
 
@@ -88,6 +91,7 @@
    <classpath refid="math3" />
    <classpath refid="testng" />
    <classpath refid="mockito" />
+   <classpath refid="selenium" />
   </javac>
  </target>
 
@@ -100,6 +104,16 @@
   <jar destfile="raddose3d.jar" basedir="bin" excludes="se/raddo/raddose3D/tests/** se/raddo/raddose3D/server/**">
    <zipfileset includes="**/*.class" src="lib/antlr-3.4/antlr-3.4-cutdown.jar"/>
    <zipfileset includes="**/*.class" src="lib/commons-math3-3.0/commons-math3-3.0.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/client-combined-3.14.0.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/byte-buddy-1.8.15.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/commons-codec-1.10.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/commons-exec-1.3.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/commons-logging-1.2.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/guava-25.0-jre.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/httpclient-4.5.5.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/httpcore-4.4.9.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/okhttp-3.10.0.jar"/>
+   <zipfileset includes="**/*.class" src="lib/selenium/libs/okio-1.14.1.jar"/>
    <fileset dir=".">
     <include name="constants/EnergyCoefsLow.txt" />
     <include name="constants/EnergyCoefsMed.txt" />
