--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/commons-math3-3.0/commons-math3-3.0-javadoc.jar"/>
-	<classpathentry kind="lib" path="lib/commons-math3-3.0/commons-math3-3.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib/commons-math3-3.0/commons-math3-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-3.4/antlr-3.4-cutdown.jar"/>
 	<classpathentry kind="lib" path="lib/testng-6.8/testng-6.8.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.22/mysql-connector-java-5.1.22-bin.jar"/>
@@ -20,5 +17,11 @@
 	<classpathentry kind="lib" path="lib/selenium/libs/httpcore-4.4.9.jar"/>
 	<classpathentry kind="lib" path="lib/selenium/libs/okhttp-3.10.0.jar"/>
 	<classpathentry kind="lib" path="lib/selenium/libs/okio-1.14.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1/commons-math3-3.6.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1/commons-math3-3.6.1-test-sources.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1/commons-math3-3.6.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1/commons-math3-3.6.1-tests.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1/commons-math3-3.6.1-tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
