--- a/build.xml
+++ b/build.xml
@@ -125,6 +125,7 @@
 	<include name="constants/below_20000/*.csv" />
 	<include name="constants/above_20000/*.csv" />
 	<include name="constants/auger_linewidths/*.csv" />
+	<include name="constants/fl_linewidths/*.csv" />
    </fileset>
 
    
@@ -156,6 +157,7 @@
 	<include name="constants/below_20000/*.csv" />
 	<include name="constants/above_20000/*.csv" />
 	<include name="constants/auger_linewidths/*.csv" />
+	<include name="constants/fl_linewidths/*.csv" />
    </fileset>
 
    <manifest>
@@ -197,6 +199,7 @@
 	<include name="constants/below_20000/*.csv" />
 	<include name="constants/above_20000/*.csv" />
 	<include name="constants/auger_linewidths/*.csv" />
+	<include name="constants/fl_linewidths/*.csv" />
    </fileset>
 
    <manifest>
