fixed build issue

--- a/build.xml
+++ b/build.xml
@@ -121,7 +121,7 @@
     <include name="constants/MuCalcConstants.txt" />
 	<include name="constants/low_overvoltage.csv" />
 	<include name="constants/high_overvoltage.csv" />
-	<include name="constants/fullelsepa.CSV" />
+	<include name="constants/fullelsepa.csv" />
 	<include name="constants/below_20000/*.csv" />
 	<include name="constants/above_20000/*.csv" />
 	<include name="constants/auger_linewidths/*.csv" />
