Fix container mixture parsing from NIST
Rebased with container commits

--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
   <echo message="Raddose3D git repository age is ${repository.revision}" />
 
   <!-- Write tree depth to Version.java -->
-  <exec executable="/bin/sed" failonerror="false">
+  <exec executable="sed" failonerror="false">
    <arg value="-i"/>
    <arg value="s/?---?/${repository.revision}/g"/>
    <arg value="src/se/raddo/raddose3D/Version.java"/>
